fix: #WB-458 spacing move cursor

--- a/scss/specifics/exercizer/_exercizer.scss
+++ b/scss/specifics/exercizer/_exercizer.scss
@@ -33,6 +33,7 @@ body.exercizer {
 
   h2 {
     font-size: 18px;
+    color: $grey-black;
   }
 
   h4 {
@@ -225,6 +226,16 @@ body.exercizer {
       }
     }
 
+
+    i {
+
+      &.trash,
+      &.edit.pick-file {
+        display: none;
+        visibility: hidden;
+      }
+    }
+
   }
 
   .eight-desktop {
@@ -252,19 +263,29 @@ body.exercizer {
     margin: -1.6rem -1.6rem 1.6rem;
   }
 
-  article.textZoneOpen {
-    z-index: 1000 !important;
-    transition: z-index 0s;
+  article {
 
-    text-zone {
-      
-      .text-zone-size {
-        max-width: 200px;
-        max-height: 40px;
-        transition: all 250ms ease, max-width 0.15s 0s ease-in,
-          max-height 0.15s 0.15s ease-out;
-        white-space: normal;
-        text-overflow: inherit;
+    &.textZoneOpen {
+      z-index: 1000 !important;
+      transition: z-index 0s;
+
+      text-zone {
+
+        .text-zone-size {
+          max-width: 200px;
+          max-height: 40px;
+          transition: all 250ms ease, max-width 0.15s 0s ease-in,
+            max-height 0.15s 0.15s ease-out;
+          white-space: normal;
+          text-overflow: inherit;
+        }
+      }
+
+    }
+
+    &.placed-block--dragging {
+      text-zone {
+        cursor: move !important;
       }
     }
   }
@@ -298,7 +319,8 @@ body.exercizer {
           content: "\e847";
           font-size: 20px;
           position: absolute;
-          right: 40px;
+          // right: 40px;
+          right: 3rem;
           top: calc(50% - 12px);
         }
 
@@ -387,31 +409,6 @@ body.exercizer {
     margin-top: 15px;
   }
 
-  .dominos.fallen {
-    .item {
-      .domino {
-        .bottom {
-          .content {
-            .buttons {
-              position: absolute;
-              top: 10px;
-              right: 10px;
-              height: calc(100% - 20px);
-              display: flex;
-              align-items: flex-end;
-              justify-content: flex-start;
-              flex-direction: column;
-            }
-          }
-
-          .title-icon i {
-            color: $text-light;
-          }
-        }
-      }
-    }
-  }
-
   .flex-row.justify-center.centered>button.flat-button.five {
     span {
       float: none;
@@ -434,124 +431,6 @@ body.exercizer {
   }
 
   /*  COLOR CORRECTED / CORRECTION ON GOING / HAS BEEN START / IS SUBMITTED */
-  .dominos .item .domino .due-date {
-    padding: 10px 0;
-    color: $grey;
-
-    strong {
-      color: inherit;
-    }
-
-    &>* {
-      display: inline-block;
-    }
-
-    &::before {
-      @include fonticon;
-      content: "\f017";
-      font-size: 20px;
-      margin-right: 5px;
-      vertical-align: middle;
-    }
-
-    &.delay {
-      color: $red;
-    }
-  }
-
-  .dominos .item .domino .bottom .content {
-    display: inline-flex;
-    align-items: center;
-    justify-content: flex-start;
-    color: $darkest-grey;
-  }
-
-  .dominos .item .domino .score {
-    font-size: 20px;
-  }
-
-  .dominos .item .domino .right-glider {
-    overflow: hidden;
-    font-size: 2em;
-    color: white;
-    height: 100%;
-    padding: 0 10px;
-    position: absolute;
-    right: 0;
-    transition: width 1s ease;
-    width: 1%;
-    min-width: 13px;
-
-    a {
-      font-size: large;
-      position: absolute;
-      color: white;
-      opacity: 0;
-      transition: opacity 0.5s ease-in 0s;
-
-      @media screen and (max-width: $tablette),
-      print {
-        display: block;
-        left: 35px;
-
-        @media screen and (max-width: $fat-mobile),
-        print {
-          top: 50px;
-        }
-
-        @media screen and (min-width: $fat-mobile),
-        print {
-          top: 35px;
-        }
-      }
-
-      @media screen and (min-width: $tablette),
-      print {
-        left: 50px;
-        top: 40px;
-
-        >i18n {
-          white-space: nowrap;
-        }
-      }
-    }
-
-    span {
-      color: white !important;
-    }
-
-    &:hover {
-
-      @media screen and (max-width: $tablette),
-      print {
-        width: 140px;
-      }
-
-      @media screen and (min-width: $tablette),
-      print {
-        width: 250px;
-      }
-
-      a {
-        opacity: 1;
-        transition: all 1s ease-in 0s;
-      }
-    }
-
-    &.green {
-      background-color: $green;
-    }
-
-    &.grey {
-      background-color: $grey;
-    }
-
-    span {
-      top: 40%;
-      position: relative;
-    }
-  }
-
   .color-corrected,
   .color-training-done {
     color: $green;
@@ -1012,7 +891,7 @@ body.exercizer {
       margin-bottom: 1rem;
       display: flex;
       flex-wrap: wrap;
-      
+
 
       >button {
         margin: 0 !important
@@ -1038,16 +917,6 @@ body.exercizer {
         align-items: flex-start;
         flex-wrap: wrap;
         justify-content: flex-start;
-      }
-    }
-  }
-
-  .zone-image {
-    i {
-      &.trash,
-      &.edit.pick-file {
-        display: none;
-        visibility: hidden;
       }
     }
   }
